--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					</div>
 					<ul class="fh5co-social">
 						<li><a href="#"><i class="icon-envelope"></i></a></li>
-						<li><a href="#"><i class="icon-twitter"></i></a></li>
+						<li><a href="#"><i class="icon-facebook"></i></a></li>
 						<li><a href="#"><i class="icon-instagram"></i></a></li>
 						<li><a href="#"><i class="icon-google"></i></a></li>
 						<li><a href="#"><i class="icon-linkedin"></i></a></li>
