--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					<ul class="fh5co-social">
 						<li><a href="#"><i class="icon-envelope"></i></a></li>
 						<li><a href="https://www.facebook.com/jacksriyadi.jacksriyadi/"><i class="icon-facebook"></i></a></li>
-						<li><a href="#"><i class="icon-instagram"></i></a></li>
+						<li><a href="https://www.instagram.com/jacks.riyadi/?hl=id"><i class="icon-instagram"></i></a></li>
 						<li><a href="#"><i class="icon-google"></i></a></li>
 						<li><a href="#"><i class="icon-linkedin"></i></a></li>
 					</ul>
