--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
 						</div>
 					</div>
 					<ul class="fh5co-social">
-						<li><a href="#"><i class="icon-envelope"></i></a></li>
+						<li><a href="<a href="mailto:name@email.com""><i class="icon-envelope"></i></a></li>
 						<li><a href="https://www.facebook.com/jacksriyadi.jacksriyadi/"><i class="icon-facebook"></i></a></li>
 						<li><a href="https://www.instagram.com/jacks.riyadi/?hl=id"><i class="icon-instagram"></i></a></li>
-						<li><a href="#"><i class="icon-google"></i></a></li>
-						<li><a href="#"><i class="icon-linkedin"></i></a></li>
+						<li><a href="https://api.whatsapp.com/send?phone=6287111&amp;text=Assalamualaikum..."><i class="icon-whatsapp"></i></a>
+						<li><a href="https://www.linkedin.com/in/jaka-eriyadi-87936019b/"><i class="icon-linkedin"></i></a></li>
 					</ul>
 				</div>
 			</div>
