--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						<li><a href="<a href="mailto:name@email.com""><i class="icon-envelope"></i></a></li>
 						<li><a href="https://www.facebook.com/jacksriyadi.jacksriyadi/"><i class="icon-facebook"></i></a></li>
 						<li><a href="https://www.instagram.com/jacks.riyadi/?hl=id"><i class="icon-instagram"></i></a></li>
-						<li><a href="https://api.whatsapp.com/send?phone=6287111&amp;text=Assalamualaikum..."><i class="icon-whatsapp"></i></a>
+						<li><a href="https://api.whatsapp.com/send?phone=+601127103937&amp;text=Assalamualaikum..."><i class="icon-whatsapp"></i></a>
 						<li><a href="https://www.linkedin.com/in/jaka-eriyadi-87936019b/"><i class="icon-linkedin"></i></a></li>
 					</ul>
 				</div>
