--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 								<img src="images/profile_img.png" alt="Free HTML5 Wesbite Template by FreeHTML5.co">
 							</figure>
 							<h1>Jaka Eriyadi</h1>
-							<p>Saya Lahir dan besar di Kota <a href="https://id.wikipedia.org/wiki/Kota_Bandar_Lampung">Bandar Lampung</a>sebuah kota di Indonesia sekaligus ibu kota dan kota terbesar di Provinsi Lampung. Bandar Lampung juga merupakan kota terbesar dan terpadat ketiga di Pulau Sumatra setelah Medan dan Palembang menurut jumlah penduduk, serta termasuk salah satu kota besar di Indonesia dan Kota terpadat di luar pulau Jawa.
+							<p>Saya Lahir dan besar di Kota <a href="https://id.wikipedia.org/wiki/Kota_Bandar_Lampung">Bandar Lampung, </a>sebuah kota di Indonesia sekaligus ibu kota dan kota terbesar di Provinsi Lampung. Bandar Lampung juga merupakan kota terbesar dan terpadat ketiga di Pulau Sumatra setelah Medan dan Palembang menurut jumlah penduduk, serta termasuk salah satu kota besar di Indonesia dan Kota terpadat di luar pulau Jawa.
 
 Secara geografis, kota ini menjadi pintu gerbang utama pulau Sumatra, tepatnya kurang lebih 165 km sebelah barat laut Jakarta, memiliki andil penting dalam jalur transportasi darat dan aktivitas pendistribusian logistik dari Jawa menuju Sumatra maupun sebaliknya. <a href="https://drive.google.com/file/d/1u-OaOMznUUmotXTJdPCBT5u6yc5xoiMo/view?usp=sharing">Unduh CV</a></p>
 						</div>
