--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@ Secara geografis, kota ini menjadi pintu gerbang utama pulau Sumatra, tepatnya k
 					</div>
 					<div class="row">
 						<div class="col-md-12 fh5co-counter">
-							<div class="fh5co-number fh5co-left">10</div>
+							<div class="fh5co-number fh5co-left">25</div>
 							<div class="fh5co-text">
-								<h3 class="border-bottom">Years of experience in Web Design</h3>
-								<p>Far far away, behind the word mountains, far from the countries.</p>
+								<h3 class="border-bottom">Tahun memberikan banyak pelajaran yang berharga bagiku</h3>
+								<p>Never Giving up is My magic.</p>
 							</div>
 						</div>
 					</div>
