--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@ Secara geografis, kota ini menjadi pintu gerbang utama pulau Sumatra, tepatnya k
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<p>Latar belakang pendidikan saya, sebagai berikut :</p>
 
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2001-2004</h2>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
+									<h2>2013/2014</h2>
+									<p>Lulus dari, Sekolah Meengah Atas DIRGANTARA, Bandar Lampung.</p>
 								</div>
 							</div>
 
@@ -122,8 +122,8 @@ Secara geografis, kota ini menjadi pintu gerbang utama pulau Sumatra, tepatnya k
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2004-2008</h2>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
+									<h2>2019/2020</h2>
+									<p>Participant of Student Mobility Programs ( INDONESIA - MALAYSIA ).</p>
 								</div>
 							</div>
 
@@ -132,8 +132,8 @@ Secara geografis, kota ini menjadi pintu gerbang utama pulau Sumatra, tepatnya k
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2008-2012</h2>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
+									<h2>Saat Ini</h2>
+									<p>Mahsiswa Internasiona Angkatan pertama Darmajaya.</p>
 								</div>
 							</div>
 
