--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ Secara geografis, kota ini menjadi pintu gerbang utama pulau Sumatra, tepatnya k
 								</div>
 								<div class="fh5co-text">
 									<h2>2013/2014</h2>
-									<p>Lulus dari, Sekolah Meengah Atas DIRGANTARA, Bandar Lampung.</p>
+									<p>Lulus dari, Sekolah Menengah Atas (SMA) DIRGANTARA, Bandar Lampung.</p>
 								</div>
 							</div>
 
@@ -133,7 +133,7 @@ Secara geografis, kota ini menjadi pintu gerbang utama pulau Sumatra, tepatnya k
 								</div>
 								<div class="fh5co-text">
 									<h2>Saat Ini</h2>
-									<p>Mahsiswa Internasiona Angkatan pertama Darmajaya.</p>
+									<p>Mahsiswa Internasional Class Angkatan pertama Darmajaya.</p>
 								</div>
 							</div>
 
