--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@ Secara geografis, kota ini menjadi pintu gerbang utama pulau Sumatra, tepatnya k
 									<i class="icon-black-tie"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2008 - Present</h2>
-									<h3>XYZ Inc.</h3>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
+									<h2>juli - September 2020</h2>
+									<h3>DPRD Provinsi Lampung.</h3>
+									<p>INTERSHIP PROGRAM.</p>
 								</div>
 							</div>
 
@@ -165,9 +165,9 @@ Secara geografis, kota ini menjadi pintu gerbang utama pulau Sumatra, tepatnya k
 									<i class="icon-black-tie"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2004-2008</h2>
-									<h3>Previous Ltd Co.</h3>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
+									<h2>2019-NOW</h2>
+									<h3> IO Darmajaya.</h3>
+									<p>Student Ambassador</p>
 								</div>
 							</div>
 
@@ -176,9 +176,9 @@ Secara geografis, kota ini menjadi pintu gerbang utama pulau Sumatra, tepatnya k
 									<i class="icon-black-tie"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>1999-2004</h2>
-									<h3>Previous Ltd Co.</h3>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
+									<h2>2019-2020</h2>
+									<h3>Student Mobilty.</h3>
+									<p>Student Mobility merupakan suatu program pertukaran pelajar yang diadakan oleh 2 negara yang memiliki kerja sama dalam sektor pendidikan.</p>
 								</div>
 							</div>
 
