--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Secara geografis, kota ini menjadi pintu gerbang utama pulau Sumatra, tepatnya k
 					<div class="row">
 						<div class="col-md-12">
 
-							<p>I have the privilege to work with these cool companies.</p>
+							<p>Beberapa pengalaman saya, sebgai berikut :</p>
 
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
