--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Secara geografis, kota ini menjadi pintu gerbang utama pulau Sumatra, tepatnya k
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<p>Latar belakang pendidikan saya, sebagai berikut :</p>
+							<p>My educational background, as follows: :</p>
 
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
