--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ Secara geografis, kota ini menjadi pintu gerbang utama pulau Sumatra, tepatnya k
 							<p>Some of the skills that I have mastered, are as follows:</p>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="95"><span><strong>Decisiveness</strong>95%</span></div>
+							<div class="chart" data-percent="95"><span><strong>creative and innovative</strong>95%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
 							<div class="chart" data-percent="93"><span><strong>Integrity</strong>93%</span></div>
@@ -207,10 +207,10 @@ Secara geografis, kota ini menjadi pintu gerbang utama pulau Sumatra, tepatnya k
 							<div class="chart" data-percent="89"><span><strong>Problem-solving</strong>89%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="85"><span><strong>Dependability</strong>85%</span></div>
+							<div class="chart" data-percent="85"><span><strong>Negotiation Skills</strong>85%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="90"><span><strong> Ability to teach and mentor</strong>90%</span></div>
+							<div class="chart" data-percent="90"><span><strong> Learning Skills</strong>90%</span></div>
 						</div>
 
 					</div>
