--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ Secara geografis, kota ini menjadi pintu gerbang utama pulau Sumatra, tepatnya k
 						</div>
 
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="89"><span><strong>Problem-solving</strong>89%</span></div>
+							<div class="chart" data-percent="89"><span><strong>problem solver</strong>89%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
 							<div class="chart" data-percent="85"><span><strong>Negotiation Skills</strong>85%</span></div>
