--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@ Secara geografis, kota ini menjadi pintu gerbang utama pulau Sumatra, tepatnya k
 							<div class="chart" data-percent="89"><span><strong>problem solver</strong>89%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="85"><span><strong>Negotiation Skills</strong>85%</span></div>
+							<div class="chart" data-percent="85"><span><strong>computing Skills</strong>85%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="90"><span><strong> Learning Skills</strong>90%</span></div>
+							<div class="chart" data-percent="90"><span><strong>Learning Skills</strong>90%</span></div>
 						</div>
 
 					</div>
