--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Secara geografis, kota ini menjadi pintu gerbang utama pulau Sumatra, tepatnya k
 								</div>
 								<div class="fh5co-text">
 									<h2>2019/2020</h2>
-									<p>Participant of Student Mobility Programs ( INDONESIA - MALAYSIA ).</p>
+									<p>Student Mobility Programs ( INDONESIA - MALAYSIA ).</p>
 								</div>
 							</div>
 
@@ -132,8 +132,8 @@ Secara geografis, kota ini menjadi pintu gerbang utama pulau Sumatra, tepatnya k
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>Saat Ini</h2>
-									<p>Mahsiswa Internasional Class Angkatan pertama Darmajaya.</p>
+									<h2>2017-2021</h2>
+									<p>Mahasiswa Internasional Class Angkatan pertama Darmajaya.</p>
 								</div>
 							</div>
 
@@ -165,8 +165,8 @@ Secara geografis, kota ini menjadi pintu gerbang utama pulau Sumatra, tepatnya k
 									<i class="icon-black-tie"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2019-NOW</h2>
-									<h3> IO Darmajaya.</h3>
+									<h2>2019-2020</h2>
+									<h3>Darmajaya</h3>
 									<p>Student Ambassador</p>
 								</div>
 							</div>
