--- a/index.html
+++ b/index.html
@@ -194,23 +194,23 @@ Secara geografis, kota ini menjadi pintu gerbang utama pulau Sumatra, tepatnya k
 							<p>Some of the skills that I have mastered, are as follows:</p>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="95"><span><strong>creative and innovative</strong>95%</span></div>
+							<div class="chart" data-percent="95"><span><strong>CREATIVE & INNOVATIVE</strong>80%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="93"><span><strong>Integrity</strong>93%</span></div>
+							<div class="chart" data-percent="93"><span><strong>ANALYTICAL SKILLS</strong>80%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="90"><span><strong>Relationship building</strong>90%</span></div>
+							<div class="chart" data-percent="90"><span><strong>Relationship building</strong>85%</span></div>
 						</div>
 
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="89"><span><strong>problem solver</strong>89%</span></div>
+							<div class="chart" data-percent="89"><span><strong>COMPUTING SKILLS</strong>89%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="85"><span><strong>computing Skills</strong>85%</span></div>
+							<div class="chart" data-percent="85"><span><strong>COMMUNICTION</strong>85%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="90"><span><strong>Learning Skills</strong>90%</span></div>
+							<div class="chart" data-percent="90"><span><strong>TEAM WORK</strong>90%</span></div>
 						</div>
 
 					</div>
